--- a/Sensotrend/Sensotrend.csproj
+++ b/Sensotrend/Sensotrend.csproj
@@ -69,6 +69,9 @@
     <Compile Include="Meal.xaml.cs">
       <DependentUpon>Meal.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Login.xaml.cs">
+      <DependentUpon>Login.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PageContent.cs" />
     <Compile Include="Insulin.xaml.cs">
       <DependentUpon>Insulin.xaml</DependentUpon>
@@ -99,6 +102,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Meal.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
