--- a/Sensotrend/Sensotrend.csproj
+++ b/Sensotrend/Sensotrend.csproj
@@ -54,6 +54,8 @@
       <HintPath>..\packages\WPtoolkit.4.2013.08.16\lib\sl4-windowsphone71\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Phone.Interop" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
@@ -83,6 +85,11 @@
       <DependentUpon>Glucose.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\TaltioniService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -114,6 +121,22 @@
     <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
+    <None Include="Service References\TaltioniService\configuration91.svcinfo" />
+    <None Include="Service References\TaltioniService\configuration.svcinfo" />
+    <None Include="Service References\TaltioniService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <Content Include="ServiceReferences.ClientConfig" />
+    <None Include="Service References\TaltioniService\Taltioni.wsdl" />
+    <None Include="Service References\TaltioniService\Taltioni.xsd" />
+    <None Include="Service References\TaltioniService\Taltioni1.xsd" />
+    <None Include="Service References\TaltioniService\Taltioni2.xsd" />
+    <None Include="Service References\TaltioniService\Taltioni3.xsd" />
+    <None Include="Service References\TaltioniService\Taltioni4.xsd" />
+    <None Include="Service References\TaltioniService\Taltioni5.xsd" />
+    <None Include="Service References\TaltioniService\TaltioniService.wsdl" />
+    <None Include="Service References\TaltioniService\TaltioniService1.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApplicationIcon.png">
@@ -133,6 +156,9 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\TaltioniService\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.CSharp.targets" />
