Uusi service reference.

--- a/Sensotrend/Sensotrend.csproj
+++ b/Sensotrend/Sensotrend.csproj
@@ -93,6 +93,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="TaltioniService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
